--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-awesome-stars-rating": "^0.13.6",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
