--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-awesome-stars-rating": "^0.13.6",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
