--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.15",
+    "@mui/material": "^5.13.5",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -28,6 +31,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.44.0",
     "recoil": "^0.7.7",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
