--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_RECAPCHA_SITE_KEY=6Lcd3pImAAAAALiqmqOJ781LiQRmvuieW-8lwRfW
+NEXT_PUBLIC_API_KEY=https://newsbyte.info
 RECAPCHA_SECRET_KEY=6Lcd3pImAAAAAGvdEKmoCuUIOVTOzrvXFuTppr1b
